# Quirky-Turt-Coin

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
contrib/: gitian-build.py  install_db4.sh  pivx-cli.bash-completion  pivx-qt.pro  pivx-tx.bash-completion  pivxd.bash-completion  valgrind.supp
depends/: Makefile  README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  (+13 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  paymentserver.h  peertablemodel.cpp  peertablemodel.h  platformstyle.cpp  (+31 more)
src/qt/forms/: addressbookpage.ui  helpmessagedialog.ui  intro.ui  openuridialog.ui  rpcconsole.ui
src/qt/locale/: quirkturt_de.ts  quirkturt_en.ts  quirkturt_en_US.ts  quirkturt_es.ts  quirkturt_es_ES.ts  quirkturt_fr_FR.ts  quirkturt_hr_HR.ts  quirkturt_it.ts  quirkturt_ko_KR.ts  quirkturt_nl.ts  quirkturt_pl.ts  quirkturt_ru.ts  quirkturt_tr.ts  quirkturt_zh_CN.ts  quirkyturt_de.ts  quirkyturt_en.ts  quirkyturt_en_US.ts  quirkyturt_es.ts  quirkyturt_es_ES.ts  quirkyturt_fr_FR.ts  quirkyturt_hr_HR.ts  quirkyturt_it.ts  quirkyturt_ko_KR.ts  quirkyturt_nl.ts  quirkyturt_pl.ts  quirkyturt_ru.ts  quirkyturt_tr.ts  quirkyturt_zh_CN.ts
src/qt/quirkturt/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  balancebubble.cpp  balancebubble.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  (+57 more)
src/qt/quirkturt/forms/: addresseswidget.ui  balancebubble.ui  coldstakingwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  topbar.ui  welcomecontentwidget.ui
src/qt/quirkturt/res/css/: style_dark.css  style_light.css
src/qt/quirkturt/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/quirkturt/settings/forms/: settingsbittoolwidget.ui  settingsfaqwidget.ui  settingssignmessagewidgets.ui  settingswidget.ui
src/qt/quirkyturt/: addnewaddressdialog.cpp  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  balancebubble.cpp  balancebubble.h  coldstakingmodel.cpp  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  focuseddialog.cpp  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  masternodeswidget.cpp  masternodeswidget.h  masternodewizarddialog.cpp  masternodewizarddialog.h  mninfodialog.cpp  mninfodialog.h  mnmodel.cpp  mnrow.cpp  (+41 more)
src/qt/quirkyturt/forms/: addresseswidget.ui  balancebubble.ui  coldstakingwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  topbar.ui  welcomecontentwidget.ui
src/qt/quirkyturt/res/css/: style_dark.css  style_light.css
src/qt/quirkyturt/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/quirkyturt/settings/forms/: settingsbittoolwidget.ui  settingsfaqwidget.ui  settingssignmessagewidgets.ui  settingswidget.ui
src/qt/res/: quirkturt-qt-res.rc  quirkyturt-qt-res.rc
src/qt/res/css/: default.css
src/qt/test/: test_main.cpp  uritests.cpp
(+617 files in other folders)
